@@ -38,6 +38,8 @@
 <p>2017-09-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/cmyk.c (ReadCMYKImage): Fix SourceForge issue #498
+&quot;memory leak in cmyk.c&quot;.</li>
 <li>coders/cut.c (ReadCUTImage): Fix SourceForge issue #497 &quot;memory
 leak in cut.c&quot;.</li>
 <li>coders/dpx.c (ReadDPXImage): Fix SourceForge issue #496 &quot;memory
